# falinks

./: .gitignore  README.md  README.org  flake.nix  index.html  nix.org  pyproject.toml  valiant.yaml
falinks/: __init__.org  __init__.py  __main__.py  cookiejar.py  deprecated.org.bak  falinks.py  link.py  miscellaneous.py  process.py  session_buddy.py  telegram.py  variables.py
falinks/resources/links/: dedup.json  links.txt  processed.txt  session_buddy.json  session_buddy_processed.json  telegram.json
falinks/resources/links/dedup/https/: emacs.stackexchange.com.json  github.com.json  github.com.txt  scrive.github.io.json  scrive.github.io.txt  www.google.com.json  www.google.com.txt
falinks/resources/links/processed/https/: github.com.txt  www.google.com.json
falinks/resources/links/session_buddy/dedup/: default.txt
falinks/resources/links/session_buddy/dedup/default/https/: dev.to.txt  search.nixos.org.json  search.nixos.org.txt  www.emacswiki.org.txt
falinks/resources/links/session_buddy/processed/: default.json
falinks/resources/links/session_buddy/sorted/: default.json  default.txt
falinks/resources/links/session_buddy/sorted_dedup/: default.json  default.txt
falinks/resources/links/sorted/https/: dev.to.json  github.com.txt  search.nixos.org.txt  siraben.dev.txt  www.google.com.txt
falinks/resources/links/sorted_dedup/https/: discourse.nixos.org.txt  github.com.txt  search.nixos.org.json  www.emacswiki.org.json
tests/: conftest.py  test_append.py  test_create.py  test_export.py
(+11 files in other folders)
